correcting spacing / margins on home page

--- a/styles/home.css
+++ b/styles/home.css
@@ -38,7 +38,7 @@
 .the-aim-container {
     display: flex;
     justify-content: center;
-    margin: 20px 20px 0 20px;
+    margin: 20px;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -110,8 +110,7 @@
 .the-containers {
     display: grid;
     grid-template-columns: 1fr;
-    padding: 10px;
-    margin: 20px;
+    margin: 0;
     align-items: stretch;
 }
 
@@ -124,7 +123,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 20px;
+    margin: 10px 20px;
     padding: 0px 20px;
     border-radius: 5px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
